fix(phase5): use Runtime.exec for terminal launch ??fixes sidebar open in terminal
Co-authored-by: Cursor <cursoragent@cursor.com>